src/pages/Landing/style.scss
@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Russo+One&display=swap");

$blue: #1f4689;
$red: #c43f51;
$white: #f9f9f9;

$verticalBreakpoint: 1450px;

.area {
  min-height: 100vh;
  width: 100%;

  display: flex;
  justify-content: space-around;
  align-items: center;
  // font-family: "Anton", sans-serif;
  font-family: "Russo One", sans-serif;

  @media (max-width: 850px) {
    flex-direction: column;
  }

  @keyframes logoAnimation {
    from {
      transform: rotate(0deg);
    }
    to {
      transform: rotate(360deg);
    }
  }

  #bg {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
  }

  .logo {
    width: 200px;
    height: auto;
    flex-shrink: 0;
    align-self: flex-start;

    @media (max-width: 1630px) {
      width: 100px;
    }

    @media (max-width: $verticalBreakpoint) {
      align-self: center;
      width: 200px;
    }

    @media (min-width: 1000px) {
      animation-name: logoAnimation;
      animation-duration: 8000ms;
      animation-iteration-count: infinite;
      animation-timing-function: linear;
    }
  }

  .cta {
    position: relative;
    flex: 1 1 0;
    @media (max-width: 610px) {
      width: 100%;
    }
  }

  .rank-box {
    display: flex;
    align-items: flex-start;
    flex: 1 1 0;
  }
  .margin {
    margin: 25px;

    @media (max-width: 1300px) {
      margin: 10px;
    }
  }

  .container {
    display: flex;
    flex-flow: row;
    justify-content: center;
    width: calc(100% - 40px);
    margin: auto;
    max-width: 1900px;

    @media (max-width: $verticalBreakpoint) {
      max-width: 600px;
      flex-direction: column;
    }

    @media (max-width: 850px) {
      padding-bottom: 50px;
    }
  }

  .box {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    flex-direction: column;
    flex: 1 1 0;
    max-width: 100%;
    background: $white;
    box-shadow: 0px 2px 3px 4px rgba(83, 78, 78, 0.32);
    padding: 25px;
    color: $red;
    border-radius: 4px;
    text-decoration: none;
    transition: all 300ms ease;
    cursor: pointer;

    &.red {
      background: $red;
      color: white;

      &:hover {
        background: white;
        color: $red;
      }
    }

    h1 {
      font-size: 1.6rem;
      text-align: center;
      margin: 0;
    }
    h5 {
      margin: 0;
      font-size: 1rem;
    }
  }
}

